salesforce-metadata/force-app/main/default/objects/Quote/fields/Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Discount_Pct__c</fullName>
    <label>Discount %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Discount percentage applied to this quote, as computed by mcp-services/pricing.</description>
</CustomField>